examples/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - host: todo.local
      http:
        paths:
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: todo-js
                port:
                  number: 80
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: todo-flask
                port:
                  number: 80
